kubernetes/apps/kyverno/tests/chainsaw/generate-defaults/limitrange-assert.yaml
apiVersion: v1
kind: LimitRange
metadata:
  name: default-limitrange
  namespace: kyverno-test-defaults
spec:
  limits:
    - type: Container
      default:
        cpu: 500m
        memory: 1Gi
      defaultRequest:
        cpu: 100m
        memory: 128Mi
