kubernetes/apps/kyverno/tests/chainsaw/generate-defaults/namespace-assert.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno-test-defaults
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
